Add provenance, classifier training, and LRU cache
Introduces a reproducibility and artifact manifest cell to the notebook, including deterministic setup, environment capture, artifact saving, and model card generation. Adds supervised classifier training and export in the notebook. In app.py, loads the classifier if present, implements an LRU cache for resolved shorteners, and integrates classifier scoring into the prediction endpoint.

--- a/Pre_Train_and_Fine_Tune_AE_+_GCN.ipynb
+++ b/Pre_Train_and_Fine_Tune_AE_+_GCN.ipynb
@@ -1718,6 +1718,213 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# --- Reproducibility, provenance, validation, and artifact manifest (ISO-friendly) ---\n",
+        "import os, json, hashlib, subprocess\n",
+        "from datetime import datetime\n",
+        "\n",
+        "print('Running provenance + artifact manifest cell')\n",
+        "\n",
+        "# A. Deterministic setup (best-effort)\n",
+        "SEED = int(os.environ.get('TRAIN_SEED', '42'))\n",
+        "try:\n",
+        "    import random\n",
+        "    random.seed(SEED)\n",
+        "    import numpy as _np\n",
+        "    _np.random.seed(SEED)\n",
+        "    import tensorflow as _tf\n",
+        "    _tf.random.set_seed(SEED)\n",
+        "    try:\n",
+        "        _tf.config.experimental.enable_op_determinism()\n",
+        "    except Exception:\n",
+        "        pass\n",
+        "    try:\n",
+        "        _tf.config.threading.set_intra_op_parallelism_threads(1)\n",
+        "        _tf.config.threading.set_inter_op_parallelism_threads(1)\n",
+        "    except Exception:\n",
+        "        pass\n",
+        "except Exception as e:\n",
+        "    print('Deterministic setup partial failure:', e)\n",
+        "\n",
+        "# B. Capture environment & git commit\n",
+        "reqs_file = 'requirements_used.txt'\n",
+        "try:\n",
+        "    subprocess.check_call([\"python\", \"-m\", \"pip\", \"freeze\"], stdout=open(reqs_file, 'w'))\n",
+        "except Exception:\n",
+        "    try:\n",
+        "        # fallback\n",
+        "        with open(reqs_file, 'w') as f:\n",
+        "            f.write('\\n'.join([f\"{k}=={v}\" for k,v in {}.items()]))\n",
+        "    except Exception:\n",
+        "        pass\n",
+        "\n",
+        "git_commit = None\n",
+        "try:\n",
+        "    git_commit = subprocess.check_output(['git','rev-parse','--short','HEAD']).decode().strip()\n",
+        "except Exception:\n",
+        "    git_commit = None\n",
+        "\n",
+        "training_provenance = {\n",
+        "    'seed': SEED,\n",
+        "    'python_packages_file': reqs_file,\n",
+        "    'git_commit': git_commit,\n",
+        "    'timestamp': datetime.utcnow().isoformat() + 'Z'\n",
+        "}\n",
+        "with open('training_provenance.json','w') as f:\n",
+        "    json.dump(training_provenance, f, indent=2)\n",
+        "\n",
+        "# C. Data/schema validation (simple checks)\n",
+        "try:\n",
+        "    assert 'df_base' in globals(), 'df_base not found'\n",
+        "    assert not df_base.isnull().any().any(), 'Nulls present in base dataset'\n",
+        "    assert X_public.shape[1] == len(feature_cols), 'Feature column count mismatch'\n",
+        "    print('Basic data checks passed')\n",
+        "except AssertionError as e:\n",
+        "    print('Data check failed:', e)\n",
+        "\n",
+        "# Helper: file checksum\n",
+        "def file_sha256(path):\n",
+        "    h = hashlib.sha256()\n",
+        "    with open(path,'rb') as f:\n",
+        "        while True:\n",
+        "            b = f.read(8192)\n",
+        "            if not b: break\n",
+        "            h.update(b)\n",
+        "    return h.hexdigest()\n",
+        "\n",
+        "# D. Save artifacts (if model and scaler exist) and record checksums\n",
+        "artifact_manifest = {'provenance': training_provenance, 'artifacts': {}}\n",
+        "try:\n",
+        "    # Save AE model, scaler, threshold if not already saved\n",
+        "    if 'ae_model' in globals():\n",
+        "        try:\n",
+        "            ae_model.save('phishing_autoencoder_model.keras')\n",
+        "        except Exception:\n",
+        "            # some Keras versions require different save; ignore\n",
+        "            pass\n",
+        "    if 'scaler' in globals():\n",
+        "        with open('scaler.pkl','wb') as f: pickle.dump(scaler, f)\n",
+        "    if 'ae_threshold' in globals():\n",
+        "        with open('autoencoder_threshold.txt','w') as f: f.write(str(ae_threshold))\n",
+        "\n",
+        "    for p in ['phishing_autoencoder_model.keras', 'scaler.pkl', 'autoencoder_threshold.txt']:\n",
+        "        if os.path.exists(p):\n",
+        "            artifact_manifest['artifacts'][p] = {'path': p, 'sha256': file_sha256(p)}\n",
+        "except Exception as e:\n",
+        "    print('Artifact save error:', e)\n",
+        "\n",
+        "# F. Model card\n",
+        "model_card = f\"\"\"\n",
+        "# Model Card\n",
+        "name: dakugumen-phishing-ae\n",
+        "trained_at: {training_provenance['timestamp']}\n",
+        "git_commit: {training_provenance['git_commit']}\n",
+        "notes: Sanitized URLs, RobustScaler, AE+GCN fusion\n",
+        "\"\"\"\n",
+        "with open('MODEL_CARD.md','w') as f: f.write(model_card)\n",
+        "artifact_manifest['artifacts']['MODEL_CARD.md'] = {'path':'MODEL_CARD.md', 'sha256': file_sha256('MODEL_CARD.md')}\n",
+        "\n",
+        "# G. Unit test for features\n",
+        "try:\n",
+        "    sample = 'https://example.com/path?utm_source=x&fbclid=123'\n",
+        "    fv = features_for_url(sample)\n",
+        "    assert isinstance(fv, (list, tuple, np.ndarray))\n",
+        "    print('features_for_url test passed')\n",
+        "except Exception as e:\n",
+        "    print('features_for_url test failed:', e)\n",
+        "\n",
+        "# H. Save manifest\n",
+        "with open('artifact_manifest.json','w') as f:\n",
+        "    json.dump(artifact_manifest, f, indent=2)\n",
+        "print('Saved artifact_manifest.json and MODEL_CARD.md')\n",
+        "\n",
+        "# I. Optionally register in Firestore (if db present)\n",
+        "try:\n",
+        "    if 'db' in globals() and db is not None:\n",
+        "        reg = db.collection(f\"artifacts/{APP_ID}/models_registry\")\n",
+        "        reg.add({'manifest': artifact_manifest, 'timestamp': firestore.SERVER_TIMESTAMP})\n",
+        "        print('Registered artifact in Firestore registry')\n",
+        "except Exception as e:\n",
+        "    print('Registry write failed (ok):', e)\n",
+        "\n",
+        "print('\\nProvenance and manifest generation complete')\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# --- Train a supervised classifier combining AE + GCN + lexical features ---\n",
+        "print('\\n--- Training supervised classifier (RandomForest) to boost detection ---')\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import classification_report\n",
+        "\n",
+        "# Build dataset from df_user (use all available labels)\n",
+        "X_rows = []\n",
+        "y_rows = []\n",
+        "feature_names = []\n",
+        "\n",
+        "expected_cols = list(getattr(scaler, 'feature_names_in_', []))\n",
+        "if not expected_cols:\n",
+        "    expected_cols = [f'f{i}' for i in range(111)]\n",
+        "\n",
+        "for idx, row in df_user.iterrows():\n",
+        "    u = row['url']\n",
+        "    lbl = int(row['label'])\n",
+        "    try:\n",
+        "        feats = features_for_url(u)\n",
+        "        scaled_feats = scaler.transform(feats.reshape(1, -1))[0]\n",
+        "        # AE recon and content score\n",
+        "        recon = ae_model.predict(scaled_feats.reshape(1, -1), verbose=0)\n",
+        "        err = float(np.mean(np.square(scaled_feats - recon[0])))\n",
+        "        content_score = float(min(err / (ae_threshold * 2), 1.0))\n",
+        "        # GCN prob if available (use 0.5 default)\n",
+        "        gcn_p = 0.5\n",
+        "        # try to map postId via df_user if present in df_user; we don't have postId mapping here\n",
+        "        # Build feature vector: [content_score, gcn_p] + scaled_feats\n",
+        "        vec = np.concatenate(([content_score, gcn_p], scaled_feats))\n",
+        "        X_rows.append(vec)\n",
+        "        y_rows.append(lbl)\n",
+        "    except Exception as e:\n",
+        "        print('Skipping URL in classifier dataset due to error:', e)\n",
+        "\n",
+        "if len(X_rows) >= 10:\n",
+        "    X = np.vstack(X_rows)\n",
+        "    y = np.array(y_rows)\n",
+        "    # Train/test split\n",
+        "    X_tr_c, X_te_c, y_tr_c, y_te_c = train_test_split(X, y, test_size=0.2, stratify=y, random_state=42)\n",
+        "    clf = RandomForestClassifier(n_estimators=200, class_weight='balanced', random_state=42)\n",
+        "    clf.fit(X_tr_c, y_tr_c)\n",
+        "    y_pred = clf.predict(X_te_c)\n",
+        "    print('Classifier evaluation on held-out fold:')\n",
+        "    print(classification_report(y_te_c, y_pred))\n",
+        "    # Save classifier and meta\n",
+        "    import pickle, json\n",
+        "    clf_path = 'phishing_classifier.pkl'\n",
+        "    meta = {\n",
+        "        'feature_names': ['content_score', 'gcn_prob'] + expected_cols,\n",
+        "        'trained_on': len(y),\n",
+        "        'timestamp': __import__('datetime').datetime.utcnow().isoformat() + 'Z'\n",
+        "    }\n",
+        "    with open(clf_path, 'wb') as f:\n",
+        "        pickle.dump(clf, f)\n",
+        "    with open('classifier_meta.json', 'w') as f:\n",
+        "        json.dump(meta, f, indent=2)\n",
+        "    print('Saved classifier and meta to disk.')\n",
+        "else:\n",
+        "    print('Not enough data to train classifier; need >=10 samples. Got', len(X_rows))\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "ry2_dvAsTLNc"
