Add ablation, bootstrap, summary, and deploy helper
Introduces a new code cell for ablation evaluation, bootstrap confidence intervals, dataset summary generation, and a helper to zip model artifacts for deployment in Pre_Train_and_Fine_Tune_AE_+_GCN.ipynb. Also adds Draft.pdf to the repository.

--- a/Pre_Train_and_Fine_Tune_AE_+_GCN.ipynb
+++ b/Pre_Train_and_Fine_Tune_AE_+_GCN.ipynb
@@ -1925,6 +1925,109 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# --- Ablation evaluation, bootstrap CIs, dataset summary, and deploy helper ---\n",
+        "import numpy as np, json\n",
+        "from sklearn.metrics import precision_recall_curve, auc, roc_auc_score, precision_recall_fscore_support\n",
+        "import matplotlib.pyplot as plt\n",
+        "from collections import Counter\n",
+        "\n",
+        "print('\\n--- Ablation & bootstrap analysis')\n",
+        "\n",
+        "def eval_probs(name, y_true, y_prob, threshold=0.5):\n",
+        "    y_pred = (y_prob > threshold).astype(int)\n",
+        "    p,r,f,_ = precision_recall_fscore_support(y_true, y_pred, average='binary', zero_division=0)\n",
+        "    try:\n",
+        "        roc = roc_auc_score(y_true, y_prob)\n",
+        "    except Exception:\n",
+        "        roc = None\n",
+        "    prec, rec, _ = precision_recall_curve(y_true, y_prob)\n",
+        "    pr_auc = auc(rec, prec)\n",
+        "    return {'name':name, 'precision':p, 'recall':r, 'f1':f, 'roc_auc':roc, 'pr_auc':pr_auc}\n",
+        "\n",
+        "results = []\n",
+        "# Public test set ablations (if available)\n",
+        "if 'y_te' in globals():\n",
+        "    # AE-only\n",
+        "    if 'ae_prob_test_finetuned' in globals():\n",
+        "        results.append(eval_probs('AE-only-public', y_te, ae_prob_test_finetuned))\n",
+        "    # GCN-only\n",
+        "    gcn_prob_test_public_local = gcn_prob_test_public if 'gcn_prob_test_public' in globals() else np.full(len(y_te), 0.5)\n",
+        "    results.append(eval_probs('GCN-only-public', y_te, gcn_prob_test_public_local))\n",
+        "    # Hybrid\n",
+        "    if 'fusion_prob_test_public' in globals():\n",
+        "        results.append(eval_probs('Hybrid-public', y_te, fusion_prob_test_public))\n",
+        "\n",
+        "# Save ablation results\n",
+        "with open('ablation_results.json','w') as f:\n",
+        "    json.dump(results, f, indent=2)\n",
+        "print('Saved ablation_results.json')\n",
+        "print(results)\n",
+        "\n",
+        "# Bootstrap CI for a metric (recall) on fused public test if present\n",
+        "def bootstrap_ci(y_true, y_prob, metric_fn, n=1000, alpha=0.05):\n",
+        "    N = len(y_true)\n",
+        "    vals = []\n",
+        "    for _ in range(n):\n",
+        "        idx = np.random.choice(N, N, replace=True)\n",
+        "        vals.append(metric_fn(y_true[idx], (y_prob[idx]>0.5).astype(int)))\n",
+        "    lo = np.percentile(vals, 100*alpha/2)\n",
+        "    hi = np.percentile(vals, 100*(1-alpha/2))\n",
+        "    return lo, np.median(vals), hi\n",
+        "\n",
+        "if 'fusion_prob_test_public' in globals() and 'y_te' in globals():\n",
+        "    lo, med, hi = bootstrap_ci(y_te, fusion_prob_test_public, lambda y,t: precision_recall_fscore_support(y,t,average='binary',zero_division=0)[1])\n",
+        "    print(f'Bootstrap recall CI (hybrid public): {lo:.3f}, {med:.3f}, {hi:.3f}')\n",
+        "    with open('bootstrap_recall_public.json','w') as f:\n",
+        "        json.dump({'ci':[lo,med,hi]}, f)\n",
+        "\n",
+        "# Dataset summary\n",
+        "summary = {}\n",
+        "try:\n",
+        "    summary['public_stats'] = {'n': int(len(df_base))}\n",
+        "    if 'y_public' in globals():\n",
+        "        summary['public_label_dist'] = dict(Counter(list(y_public)))\n",
+        "except Exception:\n",
+        "    pass\n",
+        "try:\n",
+        "    summary['user_reports_count'] = int(len(df_user))\n",
+        "    summary['user_label_dist'] = dict(Counter(df_user['label'].tolist()))\n",
+        "    # Save some example URLs\n",
+        "    summary['user_examples'] = df_user['url'].head(20).tolist()\n",
+        "except Exception:\n",
+        "    pass\n",
+        "with open('dataset_summary.json','w') as f:\n",
+        "    json.dump(summary, f, indent=2)\n",
+        "print('Saved dataset_summary.json')\n",
+        "\n",
+        "# Deploy helper: zip artifacts for manual download\n",
+        "import os\n",
+        "artifacts = ['phishing_autoencoder_model.keras','scaler.pkl','autoencoder_threshold.txt','phishing_classifier.pkl','classifier_meta.json','artifact_manifest.json','MODEL_CARD.md']\n",
+        "zip_name = 'artifacts_for_deploy.zip'\n",
+        "# Build zip (works in Colab)\n",
+        "import shutil\n",
+        "with shutil.ZipFile(zip_name, 'w') as zf:\n",
+        "    for a in artifacts:\n",
+        "        if os.path.exists(a):\n",
+        "            if os.path.isdir(a):\n",
+        "                # add directory contents\n",
+        "                for root, dirs, files in os.walk(a):\n",
+        "                    for fname in files:\n",
+        "                        path = os.path.join(root, fname)\n",
+        "                        zf.write(path)\n",
+        "            else:\n",
+        "                zf.write(a)\n",
+        "print('Built', zip_name, '— download and copy to server, then POST /reload_models')\n",
+        "\n",
+        "print('\\nDone: ablation, bootstrap, dataset summary, deploy zip created.')\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "ry2_dvAsTLNc"
