Add review queue for borderline phishing predictions
Introduces a review queue mechanism in the browser extension and backend to collect and store borderline phishing predictions for manual review. Updates .env and model training to support StandardScaler selection, adds external dataset integration in the notebook, and documents methodology and results in Draft.md.

--- a/Pre_Train_and_Fine_Tune_AE_+_GCN.ipynb
+++ b/Pre_Train_and_Fine_Tune_AE_+_GCN.ipynb
@@ -393,13 +393,23 @@
         "\n",
         "# --- Feature Scaling ---\n",
         "# Fit the scaler ONLY on benign training data to learn the \"normal\" distribution\n",
-        "# Use RobustScaler to reduce sensitivity to outliers in heavy-tailed features\n",
-        "scaler = RobustScaler().fit(X_tr[y_tr==0])\n",
+        "# Toggle between StandardScaler (for reproducibility per thesis) and RobustScaler (recommended)\n",
+        "import os\n",
+        "use_standard_scaler = os.environ.get('STANDARD_SCALER', '0').lower() in ('1','true','yes')\n",
+        "if use_standard_scaler:\n",
+        "    print('Using StandardScaler as requested for thesis reproducibility')\n",
+        "    scaler = StandardScaler().fit(X_tr[y_tr==0])\n",
+        "    scaler_type = 'StandardScaler'\n",
+        "else:\n",
+        "    print('Using RobustScaler for improved robustness to outliers')\n",
+        "    scaler = RobustScaler().fit(X_tr[y_tr==0])\n",
+        "    scaler_type = 'RobustScaler'\n",
         "\n",
         "# Transform all datasets using this scaler\n",
         "X_tr_s = scaler.transform(X_tr)\n",
         "X_val_s = scaler.transform(X_val)\n",
         "X_te_s = scaler.transform(X_te)\n",
+        "print('Scaler type:', scaler_type)\n",
         "\n",
         "print(\"Data successfully split and scaled.\")\n",
         "\n",
@@ -409,6 +419,84 @@
         "sa_path = next(iter(uploaded.keys()))\n",
         "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = sa_path\n",
         "print(\"\\n✅ Firebase authentication configured.\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# --- Optional: Add external phishing dataset (Mendeley DOI) ---\n",
+        "# Tamal, Maruf (2023), \"Phishing Detection Dataset\", Mendeley Data, V1, doi: 10.17632/6tm2d6sz7p.1\n",
+        "import requests, zipfile, io, os\n",
+        "\n",
+        "print('Attempting to fetch Mendeley dataset via DOI. If automated download fails, please manually download the dataset and upload it to Colab.')\n",
+        "\n",
+        "def try_download_doi(doi, dest_dir='external_dataset'):\n",
+        "    os.makedirs(dest_dir, exist_ok=True)\n",
+        "    doi_url = f'https://doi.org/{doi}'\n",
+        "    try:\n",
+        "        r = requests.head(doi_url, allow_redirects=True, timeout=10)\n",
+        "        final = r.url\n",
+        "        print('Resolved DOI to:', final)\n",
+        "        # If final is a zip or direct file, download\n",
+        "        if final.endswith('.zip') or 'mendeley' in final:\n",
+        "            print('Downloading archive...')\n",
+        "            rr = requests.get(final, stream=True, timeout=30)\n",
+        "            rr.raise_for_status()\n",
+        "            z = zipfile.ZipFile(io.BytesIO(rr.content))\n",
+        "            z.extractall(dest_dir)\n",
+        "            print('Extracted to', dest_dir)\n",
+        "            return dest_dir\n",
+        "        else:\n",
+        "            # Not direct; fallback: ask user to download manually\n",
+        "            print('DOI did not resolve to a direct file. Please download the dataset from the Mendeley Data page and upload it here.')\n",
+        "            return None\n",
+        "    except Exception as e:\n",
+        "        print('Automated DOI fetch failed:', e)\n",
+        "        return None\n",
+        "\n",
+        "# Try to download; if it fails, prompt the user to upload a dataset file\n",
+        "external_dir = try_download_doi('10.17632/6tm2d6sz7p.1')\n",
+        "if external_dir is None:\n",
+        "    print('\\nIf you have the dataset ZIP/CSV file, upload it now via the Files UI or using:')\n",
+        "    print(\"from google.colab import files; files.upload()\")\n",
+        "else:\n",
+        "    # Discover CSV files in the extracted directory\n",
+        "    csv_files = []\n",
+        "    for root, dirs, files in os.walk(external_dir):\n",
+        "        for f in files:\n",
+        "            if f.lower().endswith('.csv'):\n",
+        "                csv_files.append(os.path.join(root, f))\n",
+        "    print('Found CSV files:', csv_files)\n",
+        "    if csv_files:\n",
+        "        # Load first CSV and try to integrate\n",
+        "        df_ext = pd.read_csv(csv_files[0])\n",
+        "        print('External dataset shape:', df_ext.shape)\n",
+        "        # If df_ext contains a URL column, compute features and append to df_base\n",
+        "        url_cols = [c for c in df_ext.columns if 'url' in c.lower()]\n",
+        "        if url_cols:\n",
+        "            print('Detected URL column(s):', url_cols)\n",
+        "            urls = df_ext[url_cols[0]].astype(str).tolist()\n",
+        "            feats_df = pd.DataFrame([features_for_url(u) for u in urls], columns=feature_cols)\n",
+        "            # If label exists in df_ext, attach it\n",
+        "            label_col = None\n",
+        "            for c in df_ext.columns:\n",
+        "                if c.lower() in ('phishing','label','is_phishing'):\n",
+        "                    label_col = c\n",
+        "                    break\n",
+        "            if label_col is not None:\n",
+        "                feats_df['phishing'] = df_ext[label_col].astype(int).values\n",
+        "            else:\n",
+        "                feats_df['phishing'] = 0\n",
+        "            # Merge into df_base (append)\n",
+        "            df_base = pd.concat([df_base, feats_df], ignore_index=True)\n",
+        "            print('Appended external dataset; new df_base shape:', df_base.shape)\n",
+        "        else:\n",
+        "            print('No URL column detected in external CSV; please preprocess externally to provide URLs or feature columns.')\n",
+        "\n",
+        "print('External dataset integration step complete.')\n"
       ]
     },
     {
@@ -506,30 +594,42 @@
         }
       ],
       "source": [
-        "# Define the Autoencoder architecture\n",
+        "# Autoencoder hyperparameters (from thesis)\n",
+        "AE_LAYER1 = 64\n",
+        "AE_LAYER2 = 32\n",
+        "AE_BOTTLENECK = 16\n",
+        "AE_DROPOUT = 0.1\n",
+        "LR_PRETRAIN = 1e-3\n",
+        "BATCH_PRETRAIN = 512\n",
+        "EPOCHS_PRETRAIN = 30\n",
+        "LR_FINETUNE = 1e-5\n",
+        "BATCH_FINETUNE = 16\n",
+        "EPOCHS_FINETUNE = 50\n",
+        "\n",
+        "# Define the Autoencoder architecture (as in thesis)\n",
         "inp = keras.Input(shape=(X_tr_s.shape[1],))\n",
-        "x = keras.layers.Dense(64, activation=\"relu\")(inp)\n",
-        "x = keras.layers.Dropout(0.1)(x)\n",
-        "x = keras.layers.Dense(32, activation=\"relu\")(x)\n",
-        "z = keras.layers.Dense(16, activation=\"relu\")(x) # Bottleneck\n",
-        "x = keras.layers.Dense(32, activation=\"relu\")(z)\n",
-        "x = keras.layers.Dense(64, activation=\"relu\")(x)\n",
+        "x = keras.layers.Dense(AE_LAYER1, activation='relu')(inp)\n",
+        "x = keras.layers.Dropout(AE_DROPOUT)(x)\n",
+        "x = keras.layers.Dense(AE_LAYER2, activation='relu')(x)\n",
+        "z = keras.layers.Dense(AE_BOTTLENECK, activation='relu')(x)  # Bottleneck\n",
+        "x = keras.layers.Dense(AE_LAYER2, activation='relu')(z)\n",
+        "x = keras.layers.Dense(AE_LAYER1, activation='relu')(x)\n",
         "out = keras.layers.Dense(X_tr_s.shape[1])(x)\n",
         "\n",
         "ae_model = keras.Model(inp, out)\n",
-        "ae_model.compile(optimizer=keras.optimizers.Adam(1e-3), loss=\"mse\")\n",
+        "ae_model.compile(optimizer=keras.optimizers.Adam(LR_PRETRAIN), loss='mse')\n",
         "\n",
-        "print(\"--- Step 1: Pre-training Autoencoder on Public Dataset ---\")\n",
+        "print('--- Step 1: Pre-training Autoencoder on Public Dataset ---')\n",
         "history = ae_model.fit(\n",
         "    X_tr_s[y_tr == 0], X_tr_s[y_tr == 0],\n",
         "    validation_data=(X_val_s[y_val == 0], X_val_s[y_val == 0]),\n",
-        "    epochs=30,\n",
-        "    batch_size=512,\n",
+        "    epochs=EPOCHS_PRETRAIN,\n",
+        "    batch_size=BATCH_PRETRAIN,\n",
         "    verbose=1,\n",
         "    callbacks=[keras.callbacks.EarlyStopping(patience=5, monitor='val_loss', restore_best_weights=True)]\n",
         ")\n",
         "\n",
-        "print(\"\\n✅ Pre-training complete.\")"
+        "print('\\n✅ Pre-training complete.')"
       ]
     },
     {
