Add Firestore user report fetching to notebook
Introduces a new code cell that connects to Firestore using multiple credential sources, fetches user reports, and builds a DataFrame (`df_user`) with the results. The DataFrame is saved to CSV for further analysis.

--- a/dakugumen_colab.ipynb
+++ b/dakugumen_colab.ipynb
@@ -411,6 +411,108 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# === Fetch user reports from Firestore (populates `df_user`) ===\n",
+        "# Tries several credential sources: GOOGLE_APPLICATION_CREDENTIALS_JSON, firebase-sa.json, GOOGLE_APPLICATION_CREDENTIALS env var, or upload in Colab\n",
+        "import os, json\n",
+        "import pandas as pd\n",
+        "\n",
+        "df_user = pd.DataFrame()\n",
+        "APP_ID = os.environ.get('APP_ID', 'ads-phishing-link')\n",
+        "print('APP_ID =', APP_ID)\n",
+        "\n",
+        "try:\n",
+        "    from google.oauth2 import service_account\n",
+        "    from google.cloud import firestore\n",
+        "except Exception as e:\n",
+        "    print('google-cloud-firestore not available:', e)\n",
+        "    print('Install packages or ensure %pip install google-cloud-firestore ran successfully')\n",
+        "    db = None\n",
+        "else:\n",
+        "    db = None\n",
+        "    # 1) JSON content in env var\n",
+        "    gcreds_json = os.environ.get('GOOGLE_APPLICATION_CREDENTIALS_JSON')\n",
+        "    if gcreds_json:\n",
+        "        try:\n",
+        "            creds_info = json.loads(gcreds_json)\n",
+        "            creds = service_account.Credentials.from_service_account_info(creds_info)\n",
+        "            db = firestore.Client(credentials=creds, project=creds_info.get('project_id'))\n",
+        "            print('Initialized Firestore from GOOGLE_APPLICATION_CREDENTIALS_JSON')\n",
+        "        except Exception as e:\n",
+        "            print('Failed to init from GOOGLE_APPLICATION_CREDENTIALS_JSON:', e)\n",
+        "\n",
+        "    # 2) local file `firebase-sa.json`\n",
+        "    if db is None:\n",
+        "        sa_path = 'firebase-sa.json'\n",
+        "        if os.path.exists(sa_path):\n",
+        "            try:\n",
+        "                creds = service_account.Credentials.from_service_account_file(sa_path)\n",
+        "                db = firestore.Client(credentials=creds, project=creds.project_id)\n",
+        "                print('Initialized Firestore from', sa_path)\n",
+        "            except Exception as e:\n",
+        "                print('Failed to init from', sa_path, e)\n",
+        "\n",
+        "    # 3) standard GOOGLE_APPLICATION_CREDENTIALS path\n",
+        "    if db is None and os.environ.get('GOOGLE_APPLICATION_CREDENTIALS'):\n",
+        "        try:\n",
+        "            db = firestore.Client()\n",
+        "            print('Initialized Firestore from GOOGLE_APPLICATION_CREDENTIALS')\n",
+        "        except Exception as e:\n",
+        "            print('Failed to init default firestore client:', e)\n",
+        "\n",
+        "    # 4) interactive upload in Colab\n",
+        "    if db is None:\n",
+        "        try:\n",
+        "            from google.colab import files\n",
+        "            print('No Firestore creds found — please upload your service account JSON now (firebase-sa.json):')\n",
+        "            uploaded = files.upload()\n",
+        "            if uploaded:\n",
+        "                fname = next(iter(uploaded.keys()))\n",
+        "                creds = service_account.Credentials.from_service_account_file(fname)\n",
+        "                db = firestore.Client(credentials=creds, project=creds.project_id)\n",
+        "                print('Initialized Firestore from uploaded file', fname)\n",
+        "        except Exception:\n",
+        "            pass\n",
+        "\n",
+        "    # Fetch reports if db initialized\n",
+        "    if db is not None:\n",
+        "        coll = db.collection(f\"artifacts/{APP_ID}/private_user_reports\")\n",
+        "        try:\n",
+        "            docs = list(coll.stream())\n",
+        "            print('Fetched', len(docs), 'documents from Firestore')\n",
+        "            rows = []\n",
+        "            for doc in docs:\n",
+        "                d = doc.to_dict() or {}\n",
+        "                payload = d.get('payload') or {}\n",
+        "                postId = payload.get('postId') or payload.get('post_id') or None\n",
+        "                links = []\n",
+        "                if isinstance(payload.get('links'), list):\n",
+        "                    links = payload.get('links')\n",
+        "                if payload.get('url'):\n",
+        "                    links.append(payload.get('url'))\n",
+        "                rtype = d.get('type') or payload.get('type') or None\n",
+        "                userId = d.get('userId') or payload.get('userId') or payload.get('user_id') or d.get('userId') or 'anon'\n",
+        "                true_label = 1 if (rtype in ('false_negative', 'true_positive')) else 0\n",
+        "                rows.append({'post_id': postId, 'urls': links, 'type': rtype, 'userId': userId, 'label': true_label, 'raw': d})\n",
+        "            if rows:\n",
+        "                df_user = pd.DataFrame(rows)\n",
+        "                print('Built df_user with', len(df_user), 'rows')\n",
+        "                df_user.to_csv('df_user_reports.csv', index=False)\n",
+        "            else:\n",
+        "                print('No usable rows in Firestore collection; df_user empty')\n",
+        "        except Exception as e:\n",
+        "            print('Failed to read from Firestore collection:', e)\n",
+        "    else:\n",
+        "        print('Firestore client not initialized; df_user remains empty')\n",
+        "\n",
+        "print('df_user shape:', getattr(df_user, 'shape', None))\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "# === GCN artifacts creation & training (adapted from thesis notebook) ===\n",
         "# Builds a heterogeneous graph from user reports (posts/domains/users), trains a small GCN to predict\n",
         "# phishing probability per post node, and saves `gnn_probs.npy` and `post_node_map.json` for the backend.\n",
