Add user report preprocessing and post ID splitting
Added code cells to build user_reports_data from df_user and to auto-split post IDs into train and test sets, stratified by majority post label, in Pre_Train_and_Fine_Tune_AE_+_GCN.ipynb. Updated content_script.js to pass autoDetected flag to blurPost and reblurPost. Removed dakugumen_colab.ipynb.

--- a/Pre_Train_and_Fine_Tune_AE_+_GCN.ipynb
+++ b/Pre_Train_and_Fine_Tune_AE_+_GCN.ipynb
@@ -1,6 +1,102 @@
 {
   "cells": [
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Build user_reports_data from df_user for GCN / fusion grid-search\n",
+        "# Run this cell before the fusion-weight grid-search cell.\n",
+        "import ast\n",
+        "\n",
+        "user_reports_data = []\n",
+        "if 'df_user' in globals() and not df_user.empty:\n",
+        "    for _, r in df_user.iterrows():\n",
+        "        postId = r.get('post_id') or r.get('postId') or None\n",
+        "        urls = r.get('urls') or []\n",
+        "        # if stored as string, try to parse\n",
+        "        if isinstance(urls, str):\n",
+        "            try:\n",
+        "                urls = ast.literal_eval(urls)\n",
+        "            except Exception:\n",
+        "                urls = [urls]\n",
+        "        rtype = r.get('type') if 'type' in r.index else None\n",
+        "        true_label = None\n",
+        "        try:\n",
+        "            if 'label' in r.index and (int(r['label']) == 0 or int(r['label']) == 1):\n",
+        "                true_label = int(r['label'])\n",
+        "            else:\n",
+        "                true_label = 1 if (rtype in ('false_negative', 'true_positive')) else 0\n",
+        "        except Exception:\n",
+        "            true_label = 0 if (rtype in ('true_negative','false_positive')) else 0\n",
+        "        user_reports_data.append({'postId': postId, 'true_label': true_label, 'urls': urls})\n",
+        "    print('Built user_reports_data with', len(user_reports_data), 'entries')\n",
+        "else:\n",
+        "    print('df_user not present or empty; user_reports_data not created')\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Auto-split post IDs into train_post_ids and test_post_ids (stratified by majority post label)\n",
+        "from collections import Counter\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "train_post_ids = []\n",
+        "test_post_ids = []\n",
+        "\n",
+        "if 'user_reports_data' in globals() and len(user_reports_data) > 0:\n",
+        "    post_to_labels = {}\n",
+        "    for r in user_reports_data:\n",
+        "        pid = r.get('postId')\n",
+        "        if not pid:\n",
+        "            continue\n",
+        "        post_to_labels.setdefault(pid, []).append(int(r.get('true_label', 0)))\n",
+        "\n",
+        "    post_ids = []\n",
+        "    labels = []\n",
+        "    for pid, labs in post_to_labels.items():\n",
+        "        # majority label for the post\n",
+        "        lab = int(round(sum(labs) / len(labs)))\n",
+        "        post_ids.append(pid)\n",
+        "        labels.append(lab)\n",
+        "\n",
+        "    print(f'Found {len(post_ids)} unique posts with labels. Label distribution:', Counter(labels))\n",
+        "\n",
+        "    if len(post_ids) < 2:\n",
+        "        print('Not enough posts to split; assigning all to train.')\n",
+        "        train_post_ids = post_ids\n",
+        "        test_post_ids = []\n",
+        "    else:\n",
+        "        try:\n",
+        "            train_post_ids, test_post_ids = train_test_split(post_ids, test_size=0.2, stratify=labels, random_state=SEED)\n",
+        "        except Exception:\n",
+        "            # fallback to unstratified split\n",
+        "            train_post_ids, test_post_ids = train_test_split(post_ids, test_size=0.2, random_state=SEED)\n",
+        "\n",
+        "    # show splits\n",
+        "    def label_counts(ids):\n",
+        "        cnt = Counter()\n",
+        "        for pid in ids:\n",
+        "            labs = post_to_labels.get(pid, [])\n",
+        "            if labs:\n",
+        "                cnt.update([int(round(sum(labs)/len(labs)))])\n",
+        "        return dict(cnt)\n",
+        "\n",
+        "    print('Train posts:', len(train_post_ids), 'label dist:', label_counts(train_post_ids))\n",
+        "    print('Test posts :', len(test_post_ids), 'label dist:', label_counts(test_post_ids))\n",
+        "\n",
+        "else:\n",
+        "    print('user_reports_data not found or empty; cannot auto-split post IDs')\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Ig_DMomfTLNT"
